--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="icon" href="%PUBLIC_URL%/tab-icon.png" type="image/x-png"/>
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="icon" href="tab-icon.png" type="image/x-png"/>
+    <link rel="manifest" href="manifest.json" />
     <title>Prof Repairs</title>
 
     <!--FONTS-->
